cmake_minimum_required(VERSION 3.25)
project(exercise01)
project(exercise02)
project(exercise03)
project(exercise04)
project(exercise05)
project(exercise06)
project(exercise07)

set(CMAKE_CXX_STANDARD 17)

add_executable(exercise01 exercise01.cpp)
add_executable(exercise02 exercise02.cpp)
add_executable(exercise03 exercise03.cpp)
add_executable(exercise04 exercise04.cpp)
add_executable(exercise05 exercise05.cpp)
add_executable(exercise06 exercise06.cpp)
add_executable(exercise07 exercise07.cpp)
