cmake_minimum_required(VERSION 3.24)
project(exercise1)
project(exercise2)
project(exercise3)
project(exercise4)
project(exercise5)
project(exercise6)
project(exercise7)
project(exercise8)
project(exercise9)

set(CMAKE_CXX_STANDARD 17)

add_executable(exercise1 main.cpp)
add_executable(exercise2 exercise02.cpp)
add_executable(exercise3 exercise03.cpp)
add_executable(exercise4 exercise04.cpp)
add_executable(exercise5 exercise05.cpp)
add_executable(exercise6 exercise06.cpp)
add_executable(exercise7 exercise07.cpp)
add_executable(exercise8 exercise08.cpp)
add_executable(exercise9 exercise09.cpp)