cmake_minimum_required(VERSION 3.24)
project(apple)
project(banana)
project(exercise01)
project(exercise02)
project(exercise03)

set(CMAKE_CXX_STANDARD 20)

add_executable(apple apple.cpp)
add_executable(banana banana.cpp)
add_executable(exercise01 exercise01.cpp)
add_executable(exercise02 exercise02.cpp)
add_executable(exercise03 exercise03.cpp)
